--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,13 @@
 title: David Le
 email: davidhle@gatech.edu
 url: https://davidhle.com
-description: "Student, Designer, & Developer"
+description: "Student, Developer, & Designer"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary-dark: '#ffffff'
   links: '#219ab3'
   navbar: '051c42'
-
-# Footer settings
-footer: Your Website
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
