Take down template

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ social:
     url: https://www.github.com/davidhle/
   - title: instagram
     url: https://www.instagram.com/thedavidle/
+  - title: behance
+    url: https://www.behance.net/davidhle0f49
 
 # Build settings
 markdown: kramdown
